--- a/everytime/css/main.css
+++ b/everytime/css/main.css
@@ -1,16 +1,20 @@
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 /* 헤더 css 코드 */
 header {
   border-color: gray;
   display: flex;
+
   flex-direction: row;
   justify-content: center;
   align-items: center;
-
+  overflow-x: hidden;
   height: 75px;
-  border-bottom: solid 1px rgb(213, 213, 213);
+  gap: 10vw;
+
+  margin: 0 20px;
 }
 
 .check {
@@ -20,16 +24,14 @@ header {
 .logo {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  margin-right: 220px;
+  width: 180px;
 }
 
 .appname {
   display: flex;
   flex-direction: column;
   align-items: start;
-
-  margin-left: 10px;
+  white-space: nowrap;
 }
 
 .everytime {
@@ -43,31 +45,36 @@ header {
 }
 
 .bigcate {
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
   gap: 20px;
-
   font-weight: 700;
+  white-space: nowrap;
 }
 
 li:hover {
   color: red;
+  overflow: hidden;
 }
 
 .anofunc {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-
-  margin-left: 220px;
+  overflow-x: hidden;
 }
 
 .eachfunc {
   border: solid 1px rgb(205, 205, 205);
   border-radius: 25%;
   padding: 6px;
+}
 
-  margin-left: 3px;
+.headhid {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10vw;
 }
 
 .boardcate {
@@ -79,10 +86,14 @@ li:hover {
   color: rgb(88, 88, 88);
   font-size: 14px;
 
+  overflow-x: auto;
+  white-space: nowrap;
   height: 200px;
 
+  border-top: solid 1px rgb(213, 213, 213);
   border-bottom: solid 1px rgb(213, 213, 213);
 }
+
 nav {
   margin-bottom: 10px;
 }
@@ -345,6 +356,9 @@ aside {
   display: flex;
   flex-direction: column;
 
+  white-space: nowrap;
+  overflow: hidden;
+
   margin-top: 10px;
   margin-left: 10px;
 }
@@ -399,7 +413,6 @@ aside {
   border: solid 1px rgb(230, 230, 230);
   background-color: rgb(250, 250, 250);
   padding: 10px;
-
   margin-top: 5px;
 }
 
@@ -428,11 +441,6 @@ aside {
   border: solid 1px rgb(230, 230, 230);
   background-color: rgb(250, 250, 250);
   padding: 10px;
-}
-
-.sideset {
-  display: flex;
-  justify-content: center;
 }
 
 .infointerest {
@@ -464,4 +472,79 @@ aside {
 
 .boldlet {
   font-weight: 700;
+}
+
+@media all and (min-width: 640px) {
+  .sm_header {
+    display: none;
+  }
+  .sideset {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media all and (max-width: 640px) {
+  .logo,
+  .bigcate,
+  .anofunc,
+  .secretboard,
+  .letter,
+  .downfunc {
+    display: none;
+  }
+
+  header {
+    height: 50px;
+  }
+
+  .sm_header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .smh1 {
+    position: absolute;
+    left: 5vw;
+  }
+
+  .smh2 {
+    position: absolute;
+    left: 15vw;
+  }
+
+  .smh3 {
+    position: absolute;
+    right: 5vw;
+
+    color: red;
+  }
+
+  section {
+    margin-left: 15px;
+  }
+  .questhot {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 92vw;
+  }
+
+  .newletter {
+    display: flex;
+    width: 92vw;
+    padding-right: 8px;
+  }
+
+  aside {
+    justify-content: center;
+    width: 95vw;
+
+    margin-left: 15px;
+  }
+
+  footer {
+    margin-top: 20px;
+  }
 }
